--- a/index.html
+++ b/index.html
@@ -34,5 +34,23 @@
       <button onclick="check()">Verify Message</button><br>
       <span id="resp"></span>
     </div>
+    
+    <!-- Start of StatCounter Code for Default Guide -->
+    <script type="text/javascript">
+    var sc_project=11382210; 
+    var sc_invisible=1; 
+    var sc_security="c1343c8c"; 
+    var scJsHost = (("https:" == document.location.protocol) ?
+    "https://secure." : "http://www.");
+    document.write("<sc"+"ript type='text/javascript' src='" +
+    scJsHost+
+    "statcounter.com/counter/counter.js'></"+"script>");
+    </script>
+    <noscript><div class="statcounter"><a title="web statistics"
+    href="http://statcounter.com/" target="_blank"><img
+    class="statcounter"
+    src="//c.statcounter.com/11382210/0/c1343c8c/1/" alt="web
+    statistics"></a></div></noscript>
+    <!-- End of StatCounter Code for Default Guide -->
   </body>
 </html>
