Have statcounter be loaded async

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     "https://secure." : "http://www.");
     document.write("<sc"+"ript type='text/javascript' src='" +
     scJsHost+
-    "statcounter.com/counter/counter.js'></"+"script>");
+    "statcounter.com/counter/counter.js' async></"+"script>");
     </script>
     <noscript><div class="statcounter"><a title="web statistics"
     href="http://statcounter.com/" target="_blank"><img
